# AiTechnicalTest

./: .env.example  .gitignore  README.md  backend_specification.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_seed_inventory.py  0003_sessions.py
app/: config.py  main.py
app/application/services/: agent_graph.py  message_processor.py  timezone_utils.py
app/domain/: exceptions.py
app/domain/entities/: car.py  lead.py  meeting.py  reminder.py  session.py
app/domain/repositories/: email_log_repository.py  inventory_repository.py  lead_repository.py  meeting_repository.py  reminder_repository.py  session_repository.py
app/domain/use_cases/: calendar_use_case.py  email_use_case.py  speech_use_case.py  telegram_use_case.py
app/infrastructure/container/: container.py
app/infrastructure/database/: engine.py
app/infrastructure/events/: calendar_adapter.py  gmail_adapter.py  openai_adapter.py  telegram_adapter.py
app/infrastructure/handlers/: health_handler.py  webhook_handler.py
app/infrastructure/repositories/: email_log_repo.py  inventory_repo.py  lead_repo.py  meeting_repo.py  reminder_repo.py  session_repo.py
app/infrastructure/schemas/: health_schema.py  telegram_schema.py
docs/superpowers/plans/: 2026-04-17-car-dealership-telegram-bot.md  2026-04-18-sessions-identity-timezone.md
docs/superpowers/specs/: 2026-04-17-car-dealership-telegram-bot-design.md  2026-04-18-sessions-identity-timezone-design.md
tests/: conftest.py
tests/integration/test_inventory_repo/: test_inventory_repo.py
(+24 files in other folders)
